@@ -30,6 +30,7 @@ will be.
 * Added an admin script for committing and pushing.
 * Added an editor class to admin.pages for consolidating edit methods.
 * Added start, stop, and protect decorator to editor class.
+* Moved addHost calls into editor.
 
 2008.07.03 oubiwann
 
